Added ingredients endpoint
